<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="25dip"
        android:text="@string/main_title"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/places_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/place_text"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/place_text"
            android:textSize="25sp" />

        <AutoCompleteTextView
            android:id="@+id/place_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grade_1_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grade_1_text"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/grade_1_text"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/grade_1_mark"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grade_2_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grade_2_text"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/grade_2_text"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/grade_2_mark"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/oop_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grade_3_text"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/grade_3_text"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/grade_3_mark"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:text="@string/btn_min" />

        <Button
            android:id="@+id/btn_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:text="@string/btn_avg" />

        <Button
            android:id="@+id/btn_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="@string/btn_max" />

    </LinearLayout>




</LinearLayout>
