<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dip"
        android:text="@string/main_title"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/places_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/place_text"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/place_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/place_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grade_1_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grade_1_text"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/grade_1_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/grade_1_mark"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grade_2_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grade_2_text"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/grade_2_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/grade_2_mark"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/grade_3_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grade_3_text"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/grade_3_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/grade_3_mark"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/calc_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/actionType_text"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/actionType_mark"
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textSize="25sp"/>
    </LinearLayout>





</LinearLayout>
